--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ TARGET_LINK_LIBRARIES(dofpipe lsm9ds1)
 TARGET_LINK_LIBRARIES(dofpipe cjson)
 
 INSTALL(TARGETS dofpipe
-    DESTINATION usr/bin
+    DESTINATION bin
 )
 
 INSTALL(FILES ${MAN_PAGE}
