Added Time to Log

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ SET(PIPE_SOURCES
 ADD_EXECUTABLE(dofpipe ${PIPE_SOURCES})
 TARGET_LINK_LIBRARIES(dofpipe lsm9ds1)
 TARGET_LINK_LIBRARIES(dofpipe cjson)
+TARGET_LINK_LIBRARIES(dofpipe m)
 
 INSTALL(TARGETS dofpipe
     DESTINATION bin
